ci: add continuous delivery workflow

--- a/src/OpenAPI.WebApiGenerator/OpenAPI.WebApiGenerator.csproj
+++ b/src/OpenAPI.WebApiGenerator/OpenAPI.WebApiGenerator.csproj
@@ -10,7 +10,7 @@
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IsRoslynComponent>true</IsRoslynComponent>
 
-        <PackageId>Azure.Api.Generator</PackageId>
+        <PackageId>WebApiGenerator.OpenAPI</PackageId>
 
         <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
     </PropertyGroup>
