--- a/src/OpenAPI.WebApiGenerator/OpenAPI.WebApiGenerator.csproj
+++ b/src/OpenAPI.WebApiGenerator/OpenAPI.WebApiGenerator.csproj
@@ -11,7 +11,7 @@
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IsRoslynComponent>true</IsRoslynComponent>
 
-        <PackageId>WebApiGenerator.OpenAPITest</PackageId>
+        <PackageId>WebApiGenerator.OpenAPI</PackageId>
         <IncludeBuildOutput>false</IncludeBuildOutput>
         
         <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
