--- a/tests/Example.Api.IntegrationTests/Example.Api.IntegrationTests.csproj
+++ b/tests/Example.Api.IntegrationTests/Example.Api.IntegrationTests.csproj
@@ -14,6 +14,10 @@
         <PackageReference Include="JsonPointer.Net" Version="5.3.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="xunit.v3" Version="3.1.0" />
     </ItemGroup>
 
